--- a/src/main/resources/templates/admin/category/add.html
+++ b/src/main/resources/templates/admin/category/add.html
@@ -13,36 +13,40 @@
 
 <body>
 <header th:replace="fragments/header :: header(category, admin)"></header>
-<div class="form-body big-form">
-    <nav class="breadcrumb-nav">
-        <div class="nav-wrapper">
-            <div class="col s12">
-                <a th:href="@{/admin/categories}" class="breadcrumb">Реестр категорий</a>
-                <a th:href="@{/admin/categories/add}" class="breadcrumb">Добавление категории</a>
-            </div>
-        </div>
-    </nav>
-    <form id="category-add-form" class="form-horizontal row" method="POST" th:action="${'/admin/categories'}">
-        <input type="hidden" name="id" th:field="${category.id}"/>
-        <fieldset>
-            <legend>Данные категории</legend>
-            <div class="col s6">
-                <div class="input-field">
-                    <input id="name" name="name" type="text"
-                           th:field="${category.name}" class="required validate" maxlength="100"/>
-                    <label for="name">Название</label>
+<main class="container">
+    <div class="card-panel">
+        <nav class="breadcrumb-nav">
+            <div class="nav-wrapper">
+                <div class="col s12">
+                    <a th:href="@{/admin/categories}" class="breadcrumb">Реестр категорий</a>
+                    <a th:href="@{/admin/categories/add}" class="breadcrumb">Добавление категории</a>
                 </div>
             </div>
-            <div class="buttons-area col s12">
-                <button type="button" class="waves-effect waves-light btn" onclick="CategoryController.add()">Добавить</button>
-            </div>
-            <div class="col s12">
-                <div th:replace="fragments/error :: errorFragment"></div>
-            </div>
-        </fieldset>
-    </form>
-</div>
+        </nav>
+        <form id="category-add-form" class="form-horizontal row" method="POST" th:action="${'/admin/categories'}">
+            <input type="hidden" name="id" th:field="${category.id}"/>
+            <fieldset>
+                <legend>Данные категории</legend>
+                <div class="col s6">
+                    <div class="input-field">
+                        <input id="name" name="name" type="text"
+                               th:field="${category.name}" class="required validate" maxlength="100"/>
+                        <label for="name">Название</label>
+                    </div>
+                </div>
+                <div class="buttons-area col s12">
+                    <button type="button" class="waves-effect waves-light btn" onclick="CategoryController.add()">
+                        Добавить
+                    </button>
+                </div>
+                <div class="col s12">
+                    <div th:replace="fragments/error :: errorFragment"></div>
+                </div>
+            </fieldset>
+        </form>
+    </div>
 
-<div th:replace="fragments/error :: errorModalFragment"></div>
+    <div th:replace="fragments/error :: errorModalFragment"></div>
+</main>
 </body>
 </html>
