--- a/src/main/resources/templates/fragments/filter.html
+++ b/src/main/resources/templates/fragments/filter.html
@@ -1,67 +1,66 @@
-<html
-        xmlns:th="http://www.thymeleaf.org"
-        xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns="http://www.w3.org/1999/xhtml">
 
-<!-- обычный фильтр -->
-<div th:fragment="filter(url)" class="row caption">
+<div th:fragment="filter(url)">
     <form id="filter" th:action="${url}" method="get" th:object="${filter}">
-        <div class="col s12 l8">
-            <div th:replace="fragments/filter :: searchInput"></div>
+        <div class="row">
+            <div class="col s12 l9">
+                <th:block th:replace="fragments/filter :: searchInput"/>
+                <th:block th:if="${url == '/admin/users'}">
+                    <th:block th:replace="fragments/filter :: userFilter"/>
+                </th:block>
+            </div>
+            <div class="col s12 l3 right-align input-field">
+                <div th:replace="fragments/filter :: filterControls(${url})"></div>
+            </div>
         </div>
-        <div th:replace="fragments/filter :: filterControls(${url})"></div>
     </form>
-    <!--<div th:if="${addUrl != null}"-->
-         <!--th:replace="fragments/filter :: addButton(${addUrl})"></div>-->
+</div>
+
+<th:block th:fragment="searchInput">
+    <div class="input-field">
+        <input type="text" name="search" maxlength="100"
+               class="form-control" placeholder="Поиск"
+               th:field="*{search}">
+    </div>
+</th:block>
+
+<div th:fragment="filterControls(url)">
+    <button id="submit-btn" type="submit" class="waves-effect waves-light btn">
+        <i class="material-icons">search</i>
+    </button>
+    <a th:href="@{${url}}" id="reset-btn" type="button"
+       class="waves-effect waves-light btn btn-cancel">
+        <i class="material-icons">clear</i>
+    </a>
+    <!--<a class="btn filter-btn btn-small"><i class="material-icons">filter_list</i></a>-->
 </div>
 
 <!-- фильтр пользователя -->
-<div th:fragment="userFilter(url)" class="row caption">
-    <form id="filter" th:action="${url}" method="get" th:object="${filter}">
-        <div class="col s12 l8">
-            <div th:replace="fragments/filter :: searchInput"></div>
-
-            <div th:class="${'row filter-content ' + (filter.isFilterExist() ? 'filter-open' : '')}">
-                <div class="col s6">
-                    <div class="input-field select-form">
-                        <select th:field="*{role}">
-                            <option th:value="${null}">Все</option>
-                            <option th:each="r : ${roles}"
-                                    th:value="${r.toString()}"
-                                    th:text="${r.getStringName()}"></option>
-                        </select>
-                        <label>Роль</label>
-                    </div>
-                </div>
-                <div class="col s6">
-                    <div class="input-field select-form">
-                        <select th:field="*{status}">
-                            <option th:value="${null}">Все</option>
-                            <option th:each="s : ${statuses}"
-                                    th:value="${s.toString()}"
-                                    th:text="${s.getStringName()}"></option>
-                        </select>
-                        <label>Статус:</label>
-                    </div>
-                </div>
-            </div>
+<th:block th:fragment="userFilter">
+    <div class="col s6">
+        <div class="input-field select-form">
+            <select th:field="*{role}">
+                <option th:value="${null}">Все</option>
+                <option th:each="r : ${roles}"
+                        th:value="${r.toString()}"
+                        th:text="${r.getStringName()}"></option>
+            </select>
+            <label>Роль</label>
         </div>
-        <div th:replace="fragments/filter :: filterControls(${url})"></div>
-    </form>
-    <!--<div th:if="${addUrl != null}"-->
-         <!--th:replace="fragments/filter :: addButton(${addUrl})"></div>-->
-</div>
-
-<div th:fragment="searchInput" class="input-field col s12">
-    <input type="text" name="search" maxlength="100" class="form-control" placeholder="Поиск"
-           th:field="*{search}">
-</div>
-
-<div th:fragment="filterControls(url)" class="col s12 l4 filter-opts">
-    <button id="submit-btn" type="submit" class="waves-effect waves-light btn btn-small">Поиск</button>
-    <a th:href="@{${url}}" id="reset-btn" type="button"
-       class="waves-effect waves-light btn btn-cancel btn-small">Сброс</a>
-    <!--<a class="btn filter-btn btn-small"><i class="material-icons">filter_list</i></a>-->
-</div>
+    </div>
+    <div class="col s6">
+        <div class="input-field select-form">
+            <select th:field="*{status}">
+                <option th:value="${null}">Все</option>
+                <option th:each="s : ${statuses}"
+                        th:value="${s.toString()}"
+                        th:text="${s.getStringName()}"></option>
+            </select>
+            <label>Статус</label>
+        </div>
+    </div>
+</th:block>
 
 <div th:fragment="addButton(addUrl)" class="fixed-action-btn">
     <a th:href="@{${addUrl}}" class="btn-floating btn-large">
