--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,25 +15,23 @@
         </p>
     </div>
     <div class="card"
-         th:each="article : ${page.items}"
-         th:onclick="'request(\'' + @{|/articles/${article.id}|}+ '\');'">
+         th:each="article : ${page}">
         <div class="card">
             <div class="card-content">
-                <span class="card-title" th:text="|${article.getTitle()}|"></span>
-                <p th:text="|${category.getDateOpen()}|"></p>
-                <a th:href="@{/categories/${article.getCategoryId()}}">${article.getCategoryId()}</a>
+                <span class="card-title" th:text="|${article.title}|"></span>
+                <p th:text="|${#dates.format(article.dateCreate,'dd-MM-yyyy HH:mm')}|"></p>
+                <a th:href="@{'/categories/' + ${article.getCategoryId()}}" th:text="${article.getCategoryId()}"></a>
             </div>
             <div class="card-action">
-                <a th:href="@{/articles/${article.id}}">Подробнее</a>
+                <a th:href="@{'/articles/' + ${article.id}}">Подробнее</a>
             </div>
         </div>
     </div>
-    <div th:if="${page.total > 1}" class="card-content page-info">
+    <div th:if="${page.totalPages > 1}" class="card-content page-info">
         <div th:replace="fragments/pagination :: pagination('/')"></div>
     </div>
 
-    <div sec:authorize="hasRole('ROLE_AUTHOR')"
-            th:replace="fragments/filter :: addButton('/articles/add')"></div>
+    <div th:replace="fragments/filter :: addButton('/articles/add')"></div>
 
 </main>
 </body>
